--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    background-image: url(/img/background.jpeg);
+    background-image: url(img/background.jpeg);
     background-size: cover;
     line-height: 1.5;
     }
@@ -11,7 +11,7 @@ body{
     }
 
     .creation{
-      background-image: url(/img/background.jpeg);
+      background-image: url(img/background.jpeg);
       background-size: cover;
       color: white;
       font-weight: bold;
@@ -19,7 +19,7 @@ body{
     }
 
     .oferta{
-      background-image: url(/img/background.jpeg);
+      background-image: url(img/background.jpeg);
       background-size: cover;
       color: white;
       font-weight: bold;
@@ -81,7 +81,7 @@ body{
   }
   
   .bg-color{
-    background-image: url(/img/background.jpeg);
+    background-image: url(img/background.jpeg);
       color: white;
       font-weight: bold;
       margin-top: -1rem;
@@ -115,7 +115,7 @@ body{
     }
   
     footer {
-      background-image: url(/img/background.jpeg);
+      background-image: url(img/background.jpeg);
       opacity: 0.7;
       color: #ffffff;
       margin-top: -0.5rem;
